--- a/templates/cloisons/index.html.twig
+++ b/templates/cloisons/index.html.twig
@@ -47,16 +47,17 @@ Les plafonds en BA13 sont une solution idéale pour moderniser et améliorer vos
 <div class="container services">
     <div class="row">
         <!-- Autres services -->
-        <div class="col-md-6 autres-services">
-            <h2>Autres services</h2>
-            <ul>
-            <li><i class="fa fa-chevron-right"></i> Démolition et curage</li>
-                <li><i class="fa fa-chevron-right"></i> Maçonnerie</li>
-                <li><i class="fa fa-chevron-right"></i> Peinture</li>
-                <li><i class="fa fa-chevron-right"></i> Sols et revêtements muraux</li>
-                <li><i class="fa fa-chevron-right"></i> Solutions acoustiques</li>
-            </ul>
-        </div>
+       <div class="col-md-6 autres-services">
+    <h2>Autres services</h2>
+    <ul>
+        <li><i class="fa fa-chevron-right"></i> <a href="{{ path('app_demolition') }}">Démolition et curage</a></li>
+        <li><i class="fa fa-chevron-right"></i> <a href="{{ path('app_maconnerie') }}">Maçonnerie</a></li>
+        <li><i class="fa fa-chevron-right"></i> <a href="{{ path('app_peinture') }}">Peinture</a></li>
+        <li><i class="fa fa-chevron-right"></i> <a href="{{ path('app_revetements') }}">Sols et revêtements muraux</a></li>
+        <li><i class="fa fa-chevron-right"></i> <a href="{{ path('app_isolation') }}">Solutions acoustiques</a></li>
+    </ul>
+</div>
+
 
         <!-- Image et bouton -->
         <div class="col-md-6 image-et-bouton">
