--- a/templates/demolition/index.html.twig
+++ b/templates/demolition/index.html.twig
@@ -49,11 +49,11 @@
             
                <h2>Autres services</h2>
             <ul>
-               <li><i class="fa fa-chevron-right"></i> Maçonnerie</li>
-               <li><i class="fa fa-chevron-right"></i> Sols et revêtements muraux</li>
-               <li><i class="fa fa-chevron-right"></i> Peinture</li>
-               <li><i class="fa fa-chevron-right"></i> Cloisons mobiles et plafond</li>
-               <li><i class="fa fa-chevron-right"></i> Solutions acoustiques</li>
+               <li><i class="fa fa-chevron-right"></i> <a href="{{ path('app_maconnerie') }}">Maçonnerie</a></li>
+               <li><i class="fa fa-chevron-right"></i> <a href="{{ path('app_revetements') }}">Sols et revêtements muraux</a></li>
+               <li><i class="fa fa-chevron-right"></i> <a href="{{ path('app_peinture') }}">Peinture</a></li>
+               <li><i class="fa fa-chevron-right"></i> <a href="{{ path('app_cloisons') }}">Cloisons mobiles et plafonds</a></li>
+               <li><i class="fa fa-chevron-right"></i> <a href="{{ path('app_isolation') }}">Solutions acoustiques</a></li>
             </ul>
                
             
