--- a/templates/isolation/index.html.twig
+++ b/templates/isolation/index.html.twig
@@ -85,11 +85,11 @@
         <div class="col-md-6 autres-services">
             <h2>Autres services</h2>
             <ul>
-            <li><i class="fa fa-chevron-right"></i> Démolition et curage</li>
-                <li><i class="fa fa-chevron-right"></i> Maçonnerie</li>
-                <li><i class="fa fa-chevron-right"></i> Peinture</li>
-                <li><i class="fa fa-chevron-right"></i> Sols et revêtements muraux</li>
-                <li><i class="fa fa-chevron-right"></i> Cloisons mobiles et plafonds</li>
+            <li><i class="fa fa-chevron-right"></i> <a href="{{ path('app_demolition') }}">Démolition et curage</a></li>
+                <li><i class="fa fa-chevron-right"></i> <a href="{{ path('app_maconnerie') }}">Maçonnerie</a></li>
+                <li><i class="fa fa-chevron-right"></i> <a href="{{ path('app_peinture') }}">Peinture</a></li>
+                <li><i class="fa fa-chevron-right"></i> <a href="{{ path('app_revetements') }}">Sols et revêtements muraux</a></li>
+                <li><i class="fa fa-chevron-right"></i> <a href="{{ path('app_cloisons') }}">Cloisons mobiles et plafonds</a></li>
             </ul>
         </div>
 
