--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -81,7 +81,7 @@ body {
 
 /* le proverbe*/
 .lead {
-    font-size:20px;
+    font-size: 22px; /* Augmenter la taille de la police */
     color: white; /* Texte blanc */
     text-align: left;
     margin-bottom: 2rem;
@@ -89,8 +89,11 @@ body {
     margin-left: auto;
     margin-right: 100px;
     margin-top: 50px;
-    /*box-shadow: 0px 4px 8px rgba(1, 0, 0, 0.9);*/
+    background-color: rgba(0, 0, 0, 0.2); /* Fond noir semi-transparent */
+    padding: 15px; /* Ajouter du padding pour rendre le texte plus aéré */
+    border-radius: 10px; /* Bordure arrondie pour un effet plus esthétique */
 }
+
 
 /* Boutons demande d'etude*/
 .btn-study-acceuil {
@@ -296,6 +299,41 @@ body {
     font-size: 20px;
     font-weight: bold;
 }
+/* CSS pour garantir que toutes les images soient de la même taille dans la section réalisations */
+.realisations-section .img-hover {
+    width: 100%;
+    height: 200px; /* Hauteur fixe pour toutes les images */
+    position: relative;
+    overflow: hidden; /* Masque les parties des images qui dépassent */
+    border-radius: 8px; /* Ajout d'arrondi aux coins */
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Ajout d'une légère ombre */
+}
+
+.realisations-section .img-hover img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover; /* Les images sont redimensionnées pour remplir tout l'espace sans déformation */
+    object-position: center; /* Centrer les images */
+}
+
+/* Optionnel : styliser le texte qui apparaît lors du survol de l'image */
+.realisations-section .img-hover .hover-overlay {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background: rgba(0, 0, 0, 0.5); /* Fond semi-transparent */
+    color: #fff; /* Texte en blanc */
+    text-align: center;
+    padding: 10px;
+    opacity: 0;
+    transition: opacity 0.3s ease; /* Transition fluide pour l'apparition du texte */
+}
+
+.realisations-section .img-hover:hover .hover-overlay {
+    opacity: 1;
+}
+
 /*section pourquoi s'inscrire*/
 .icon-box {
     
@@ -329,6 +367,9 @@ body {
 .btn-lg:hover {
     background-color: #215992 !important; /* Couleur bleu encore plus foncé au survol */
 
+}
+.lead-2{
+    font-size: 20px;
 }
 /* Section avis clients */
 .testimonials-section {
@@ -1804,7 +1845,7 @@ iframe {
 }
 .item-chantier img{
     width: 70%;
-    height: 500px;
+    height: 600px;
     border-radius: 10px;
 }
 
