--- a/templates/admin/chantier_new.html.twig
+++ b/templates/admin/chantier_new.html.twig
@@ -30,4 +30,11 @@
         </div>
     {{ form_end(form) }}
 </div>
+<style>
+.btn-success {
+    background-color: #1d4e89;
+    border-color: #1d4e89;
+    margin-bottom: 80px;
+}
+</style>
 {% endblock %}
