--- a/templates/admin/chantier_edit.html.twig
+++ b/templates/admin/chantier_edit.html.twig
@@ -32,4 +32,11 @@
         <a href="{{ path('chantier_show', {id: chantier.id}) }}" class="btn btn-primary">Annuler</a>
     </div>
 </div>
+<style>
+.btn-primary {
+    background-color: #1d4e89;
+    border-color: #1d4e89;
+    margin-bottom: 80px;
+}
+</style>
 {% endblock %}
