--- a/templates/admin/edit_disponibilite.html.twig
+++ b/templates/admin/edit_disponibilite.html.twig
@@ -5,7 +5,7 @@
 {% block body %}
 <div class="container mt-5 back">
     <div class="card shadow-lg border-0">
-        <div class="card-header bg-primary text-white text-center">
+        <div class="card-header text-white text-center">
             <h2>Modifier la Disponibilité</h2>
         </div>
         <div class="card-body">
