--- a/templates/equipe/index.html.twig
+++ b/templates/equipe/index.html.twig
@@ -16,24 +16,24 @@
     <section class="team-members text-center">
         <div class="row justify-content-center">
             <div class="col-md-4">
-                <img src="{{ asset('images/avatar.jpg') }}" alt="TRABELSI Nadia" class="avatar">
+                <img src="{{ asset('images/nadia.jpg') }}" alt="TRABELSI Nadia" class="avatar">
                 <h3>TRABELSI Nadia</h3>
                 <h4>Gérante</h4>
                 <p>
                     Nadia, forte d'une expérience solide dans le domaine de la rénovation, est une gestionnaire dévouée. Son leadership et son attention aux détails assurent la réussite des projets de l'entreprise.
                 </p>
-                <p><strong>Email :</strong> nadia.trabelsi@homerenov91.fr</p>
-                <p><strong>Téléphone :</strong> 01 23 45 67 89</p>
+                <p><strong>Email :</strong> homerenovations91@gmail.com</p>
+                <p><strong>Téléphone :</strong> 07 61 10 69 59</p>
             </div>
             <div class="col-md-4">
-                <img src="{{ asset('images/avatar.jpg') }}" alt="TRABELSI Wael" class="avatar">
+                <img src="{{ asset('images/wael.jpg') }}" alt="TRABELSI Wael" class="avatar">
                 <h3>TRABELSI Wael</h3>
                 <h4>Dirigeant</h4>
                 <p>
                     Wael, avec son expertise technique, supervise les aspects opérationnels. Il s'assure que chaque chantier se déroule dans les meilleures conditions et respecte les normes de qualité.
                 </p>
-                <p><strong>Email :</strong> wael.trabelsi@homerenov91.fr</p>
-                <p><strong>Téléphone :</strong> 01 98 76 54 32</p>
+                <p><strong>Email :</strong> homerenovations91@gmail.com</p>
+                <p><strong>Téléphone :</strong> 07 61 10 69 59</p>
             </div>
         </div>
     </section>
