--- a/templates/expertises/index.html.twig
+++ b/templates/expertises/index.html.twig
@@ -26,11 +26,11 @@
     <section class="before-after-section mt-5 text-center">
         <div class="row">
             <div class="col-md-6">
-                <img src="{{ asset('images/image1.jpg') }}" alt="Avant notre intervention" class="img-fluid">
+                <img src="{{ asset('images/yess4.jpg') }}" alt="Avant notre intervention" class="img-fluid">
                 <p>Avant notre intervention</p>
             </div>
             <div class="col-md-6">
-                <img src="{{ asset('images/image1.jpg') }}" alt="Après notre intervention" class="img-fluid">
+                <img src="{{ asset('images/yess1.jpg') }}" alt="Après notre intervention" class="img-fluid">
                 <p>Après notre intervention</p>
             </div>
         </div>
