--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -132,8 +132,9 @@
         <!-- Mentions légales et Politique de confidentialité -->
         <div class="footer-row footer-legal">
             <ul class="footer-legal-links">
-                <li><a href="/mentions-legales">Mentions légales</a></li>
-                <li><a href="/confidentialite">Politique de confidentialité</a></li>
+                <li><a href="{{ path('app_mentions_legales') }}">Mentions Légales</a></li>
+                <li><a href="{{ path('app_politique_confidentialite') }}">Politique de Confidentialité</a>
+</li>
             </ul>
         </div>
 
