--- a/templates/demolition/index.html.twig
+++ b/templates/demolition/index.html.twig
@@ -8,24 +8,24 @@
 <section class="demolition-content">
 <div class="image-section">
     <div class="main-image">
-        <img src="{{ asset('images/image1.jpg') }}" alt="Main Image" class="img-fluid">
+        <img src="{{ asset('images/demolition2.jpg') }}" alt="Main Image" class="img-fluid demol">
     </div>
     <div class="image-thumbnails">
         <div class="thumbnail-item">
-            <img src="{{ asset('images/image1.jpg') }}" alt="Démolition" class="img-fluid">
-            <p>Démolition</p>
+            <img src="{{ asset('images/demolition1.jpg') }}" alt="Démolition" class="img-fluid demol">
+           
         </div>
         <div class="thumbnail-item">
-            <img src="{{ asset('images/image1.jpg') }}" alt="Evacuation gravats" class="img-fluid">
-            <p>curage</p>
+            <img src="{{ asset('images/demolition3.jpg') }}" alt="Evacuation gravats" class="img-fluid demol">
+           
         </div>
         <div class="thumbnail-item">
-            <img src="{{ asset('images/image1.jpg') }}" alt="Désamiantage" class="img-fluid">
-            <p>Evacuation</p>
+            <img src="{{ asset('images/demolition4.jpg') }}" alt="Désamiantage" class="img-fluid demol">
+            
         </div>
         <div class="thumbnail-item">
-            <img src="{{ asset('images/image1.jpg') }}" alt="Recyclage" class="img-fluid">
-            <p>Recyclage</p>
+            <img src="{{ asset('images/demolition5.jpg') }}" alt="Recyclage" class="img-fluid demol">
+            
         </div>
     </div>
 </div>
