--- a/templates/isolation/index.html.twig
+++ b/templates/isolation/index.html.twig
@@ -7,7 +7,7 @@
 <div class="isolation">
     <div class="circle-image-container">
         <div class="circle-image">
-            <img src="{{ asset('images/image1.jpg') }}" alt="isolation" class="img-fluid">
+            <img src="{{ asset('images/isolation1.jpg') }}" alt="isolation" class="img-fluid">
         </div>
     </div>
 
@@ -95,7 +95,7 @@
 
         <!-- Image et bouton -->
         <div class="col-md-6 image-et-bouton">
-            <img src="{{ asset('images/image1.jpg') }}" alt="Image description" class="img-fluid">
+            <img src="{{ asset('images/isolation2.jpg') }}" alt="Image description" class="img-fluid">
             <button class="dm-etude">Demandez votre étude</button>
         </div>
     </div>
