--- a/templates/peinture/index.html.twig
+++ b/templates/peinture/index.html.twig
@@ -7,24 +7,24 @@
 <div class="container-peinture">
     
     <div class="main-image-peinture">
-        <img src="{{ asset('images/image1.jpg') }}" alt="Main Image" class="img-fluid">
+        <img src="{{ asset('images/peinture2.jpg') }}" alt="Main Image" class="img-fluid">
     </div>
 
     <div class="thumbnail-section-peinture">
         <div class="thumbnail-peinture">
-            <img src="{{ asset('images/image1.jpg') }}" alt="Thumbnail 1" class="img-fluid">
+            <img src="{{ asset('images/peinture4.jpg') }}" alt="Thumbnail 1" class="img-fluid">
             <div class="overlay-peinture">
                 <p>Murs et plafonds</p>
             </div>
         </div>
         <div class="thumbnail-peinture">
-            <img src="{{ asset('images/image1.jpg') }}" alt="Thumbnail 2" class="img-fluid">
+            <img src="{{ asset('images/peinture5.jpg') }}" alt="Thumbnail 2" class="img-fluid">
             <div class="overlay-peinture">
                 <p>Sols</p>
             </div>
         </div>
         <div class="thumbnail-peinture">
-            <img src="{{ asset('images/image1.jpg') }}" alt="Thumbnail 3" class="img-fluid">
+            <img src="{{ asset('images/peinture3.jpg') }}" alt="Thumbnail 3" class="img-fluid">
             <div class="overlay-peinture">
                 <p>Boiseries</p>
             </div>
@@ -69,7 +69,7 @@
 
         <!-- Image et bouton -->
         <div class="col-md-6 image-et-bouton">
-            <img src="{{ asset('images/image1.jpg') }}" alt="Image description" class="img-fluid">
+            <img src="{{ asset('images/peinture1.jpg') }}" alt="Image description" class="img-fluid">
             <button class="dm-etude">Demandez votre étude</button>
         </div>
     </div>
