--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -655,7 +655,7 @@ margin-bottom: 120px;
     margin: 20px;
     margin-left: 30%;
     display: inline-block !important; /* Pour que le bouton prenne juste la taille de son contenu */
-    background-color: #016bd5 !important; /* Garde la couleur de fond */
+    background-color: #003366 !important; /* Garde la couleur de fond */
     color: white !important; /* Garde la couleur du texte */
     border: none !important; /* Retire les bordures */
     border-radius: 20px !important; /* Coins arrondis */
@@ -774,9 +774,7 @@ margin-bottom: 120px;
     color: #003366;
     margin-bottom: 30px;
 }
-#projet{
 
-}
 
 .adress {
     color: #003366;
@@ -832,6 +830,9 @@ iframe {
     font-weight: bold;
     color: #003366;
 }
+.demol{
+    height: 50%;
+}
 
 .demolition-content {
     display: flex;
@@ -867,7 +868,7 @@ iframe {
 
 .thumbnail-item img {
     width: 100%;
-    height: auto;
+    height: 140px;
     border-radius: 10px;
     transition: transform 0.3s ease; 
 }
@@ -1032,7 +1033,7 @@ iframe {
 
 .thumbnail-item-maconnerie  img {
     width: 100%;
-    height: auto;
+    height: 150px;
     border-radius: 10px;
     transition: transform 0.3s ease; 
 }
@@ -1119,7 +1120,7 @@ iframe {
 
 .main-image-revetement  img {
     width: 90%;
-    height: 300px;
+    height: 400px;
     border-radius: 10px;
     margin-bottom: 20px;
     margin-left: 40px;
@@ -1140,7 +1141,7 @@ iframe {
 
 .thumbnail-item-revetement  img {
     width: 100%;
-    height: auto;
+    height: 140px;
     border-radius: 10px;
     transition: transform 0.3s ease; 
 }
@@ -1330,7 +1331,7 @@ iframe {
 
 .main-image-peinture img {
     width: 100%; /* Ajuster l'image principale à 100% de son conteneur */
-    height: auto;
+    height: 520px;
     border-radius: 10px;
 }
 
@@ -1485,6 +1486,7 @@ iframe {
 /* Ajuster la taille des images */
 .cloisons-images img {
     width: 100%;
+    height: 220px;
     border-radius: 10px;
     transition: transform 0.3s ease-in-out;
 }
@@ -1870,7 +1872,7 @@ iframe {
 }
 
 .retour {
-    background-color: #007bff;
+    background-color: #003366;
     color: white;
     border: none;
     padding: 10px 20px;
@@ -2175,6 +2177,11 @@ button {
         order: 2;
         margin-top: 20px;
         max-width: 100% !important;
+        text-align: center;
+    }
+    .text-content-revetement{
+        max-width: 100% !important;
+        margin-top: -80px;
         text-align: center;
     }
     /*page peinture*/
