--- a/templates/cloisons/index.html.twig
+++ b/templates/cloisons/index.html.twig
@@ -18,18 +18,18 @@
         <div class="col-md-6">
             <div class="row">
                 <div class="col-6">
-                    <img src="{{ asset('images/image1.jpg') }}" alt="Cloisons mobiles 1" class="img-fluid img-hover-cloisons">
+                    <img src="{{ asset('images/placo3.jpg') }}" alt="Cloisons mobiles 1" class="img-fluid img-hover-cloisons">
                 </div>
                 <div class="col-6">
-                    <img src="{{ asset('images/image1.jpg') }}" alt="Cloisons mobiles 2" class="img-fluid img-hover-cloisons">
+                    <img src="{{ asset('images/placo4.jpg') }}" alt="Cloisons mobiles 2" class="img-fluid img-hover-cloisons">
                 </div>
             </div>
             <div class="row mt-3">
                 <div class="col-6">
-                    <img src="{{ asset('images/image1.jpg') }}" alt="Cloisons mobiles 3" class="img-fluid img-hover-cloisons">
+                    <img src="{{ asset('images/placo1.jpg') }}" alt="Cloisons mobiles 3" class="img-fluid img-hover-cloisons">
                 </div>
                 <div class="col-6">
-                    <img src="{{ asset('images/image1.jpg') }}" alt="Cloisons mobiles 4" class="img-fluid img-hover-cloisons">
+                    <img src="{{ asset('images/placo2.jpg') }}" alt="Cloisons mobiles 4" class="img-fluid img-hover-cloisons">
                 </div>
             </div>
         </div>
@@ -61,7 +61,7 @@ Les plafonds en BA13 sont une solution idéale pour moderniser et améliorer vos
 
         <!-- Image et bouton -->
         <div class="col-md-6 image-et-bouton">
-            <img src="{{ asset('images/image1.jpg') }}" alt="Image description" class="img-fluid">
+            <img src="{{ asset('images/placo5.jpg') }}" alt="Image description" class="img-fluid">
             <button class="dm-etude">Demandez votre étude</button>
         </div>
     </div>
