--- a/templates/maçonnerie/index.html.twig
+++ b/templates/maçonnerie/index.html.twig
@@ -19,19 +19,19 @@
 </div>
 <div class="image-section-maconnerie">
     <div class="main-image-maconnerie">
-        <img src="{{ asset('images/image1.jpg') }}" alt="Main Image" class="img-fluid">
+        <img src="{{ asset('images/maconnerie4.jpg') }}" alt="Main Image" class="img-fluid">
     </div>
     <div class="image-thumbnails-maconnerie">
         <div class="thumbnail-item-maconnerie">
-            <img src="{{ asset('images/image1.jpg') }}" alt="Sols beton" class="img-fluid">
+            <img src="{{ asset('images/maconnerie3.jpg') }}" alt="Sols beton" class="img-fluid">
             <p>Sols beton</p>
         </div>
         <div class="thumbnail-item-maconnerie">
-            <img src="{{ asset('images/image1.jpg') }}" alt="Murs et cloisons" class="img-fluid">
+            <img src="{{ asset('images/maconnerie1.jpg') }}" alt="Murs et cloisons" class="img-fluid">
             <p>Murs et cloisons</p>
         </div>
         <div class="thumbnail-item-maconnerie">
-            <img src="{{ asset('images/image1.jpg') }}" alt="Terrasses" class="img-fluid">
+            <img src="{{ asset('images/maconnerie2.jpg') }}" alt="Terrasses" class="img-fluid">
             <p>Terrasses</p>
         </div>
         
