--- a/templates/revetements/index.html.twig
+++ b/templates/revetements/index.html.twig
@@ -8,24 +8,24 @@
 <section class="revetement-content">
         <div class="image-section-revetement">
     <div class="main-image">
-        <img src="{{ asset('images/image1.jpg') }}" alt="Main Image" class="img-fluid">
+        <img src="{{ asset('images/revetement5.jpg') }}" alt="Main Image" class="img-fluid">
     </div>
     <div class="image-thumbnails-revetement">
         <div class="thumbnail-item-revetement">
-            <img src="{{ asset('images/image1.jpg') }}" alt="Sols souples" class="img-fluid">
-            <p>Sols souples</p>
+            <img src="{{ asset('images/retement1.jpg') }}" alt="Sols souples" class="img-fluid">
+            
         </div>
         <div class="thumbnail-item-revetement">
-            <img src="{{ asset('images/image1.jpg') }}" alt="Carrelage" class="img-fluid">
-            <p>Carrelage</p>
+            <img src="{{ asset('images/revetement4.jpg') }}" alt="Carrelage" class="img-fluid">
+            
         </div>
         <div class="thumbnail-item-revetement">
-            <img src="{{ asset('images/image1.jpg') }}" alt="Revêtements muraux décoratifs" class="img-fluid">
-            <p>Revêtements muraux décoratifs</p>
+            <img src="{{ asset('images/revetement3.jpg') }}" alt="Revêtements muraux décoratifs" class="img-fluid">
+            
         </div>
         <div class="thumbnail-item-revetement">
-            <img src="{{ asset('images/image1.jpg') }}" alt="Peinture" class="img-fluid">
-            <p>Peinture</p>
+            <img src="{{ asset('images/revetement2.jpg') }}" alt="Peinture" class="img-fluid">
+           
         </div>
     </div>
 </div>
@@ -59,7 +59,7 @@
         <div class="col-md-3 tp">
             <h3 class="types">Peinture</h3>
             <p class="tp-revetement">La peinture est un moyen rapide et efficace de transformer vos murs. De la finition mate à la laque brillante, elle s'adapte à toutes vos envies.</p>
-            <a href="#" class="text-primary sur-peinture">+ sur peinture</a>
+            <a href="{{ path('app_peinture') }}" class="text-primary sur-peinture">+ sur peinture</a>
         </div>
     </div>
 </div>
@@ -79,7 +79,7 @@
 
         <!-- Image et bouton -->
         <div class="col-md-6 image-et-bouton">
-            <img src="{{ asset('images/image1.jpg') }}" alt="Image description" class="img-fluid">
+            <img src="{{ asset('images/revetement6.jpg') }}" alt="Image description" class="img-fluid">
             <button class="dm-etude">Demandez votre étude</button>
         </div>
     </div>
