--- a/templates/admin/disponibilites.html.twig
+++ b/templates/admin/disponibilites.html.twig
@@ -4,7 +4,7 @@
 
 {% block body %}
 <div class="container my-5 back">
-    <h1>Gestion des rendez-vous</h1>
+    <h1 class="titre">Gestion des rendez-vous</h1>
 
     <!-- Bouton pour revenir au Dashboard Admin -->
     <div class="mb-4 text-start">
@@ -162,4 +162,17 @@
 
   
 </div>
+<style>
+.titre{
+    text-align: center;
+}
+.text-start{
+    margin-top: 50px;
+    margin-bottom: -50px;
+    margin-left: 40%;
+}
+.text-end{
+    margin-right: 42%;
+}
+</style>
 {% endblock %}
