--- a/templates/cloisons/index.html.twig
+++ b/templates/cloisons/index.html.twig
@@ -62,7 +62,7 @@ Les plafonds en BA13 sont une solution idéale pour moderniser et améliorer vos
         <!-- Image et bouton -->
         <div class="col-md-6 image-et-bouton">
             <img src="{{ asset('images/placo5.jpg') }}" alt="Image description" class="img-fluid">
-            <button class="dm-etude">Demandez votre étude</button>
+            <button class="dm-etude"><a href="{{ path('contact') }}">DEMANDE D'ÉTUDE</a></button>
         </div>
     </div>
 </div>
