--- a/templates/demolition/index.html.twig
+++ b/templates/demolition/index.html.twig
@@ -78,7 +78,7 @@
         </div>
     </div>
 </section>
- <button class="btn-study">Demandez votre étude</button>
-
+ 
+<a href="{{ path('contact') }}" class="btn btn-primary btn-study">DEMANDE D'ÉTUDE</a>
 
 {% endblock %}
