--- a/templates/legal/mentions_legales.html.twig
+++ b/templates/legal/mentions_legales.html.twig
@@ -14,12 +14,11 @@
             </p>
             <ul>
                 <li><strong>Nom de l'entreprise</strong> : Homerenov91</li>
-                <li><strong>Statut juridique</strong> : SARL (ou autre)</li>
+                <li><strong>Statut juridique</strong> : SARL</li>
                 <li><strong>Adresse</strong> : 26 Rue Gabriel Péri, Draveil 91210</li>
                 <li><strong>Email</strong> : homerenovations91@gmail.com</li>
                 <li><strong>Téléphone</strong> : +33 7 61 10 69 59</li>
-                <li><strong>SIRET</strong> : [Numéro de SIRET]</li>
-                <li><strong>Numéro TVA intracommunautaire</strong> : [Numéro de TVA]</li>
+                <li><strong>SIRET</strong> : 927 646802 00011</li>
                 <li><strong>Directeur de publication</strong> : Madame Nadia Trabelsi</li>
             </ul>
 
@@ -28,10 +27,10 @@
                 Le site est hébergé par :
             </p>
             <ul>
-                <li><strong>Nom de l'hébergeur</strong> : [Nom de l'hébergeur]</li>
-                <li><strong>Adresse</strong> : [Adresse complète de l'hébergeur]</li>
-                <li><strong>Téléphone</strong> : [Numéro de téléphone de l'hébergeur]</li>
-                <li><strong>Site Web</strong> : [www.hebergeur.com](#)</li>
+                <li><strong>Nom de l'hébergeur</strong> : IONOS</li>
+                <li><strong>Adresse</strong> :  Montabaur, Allemagne</li>
+                <li><strong>Téléphone</strong> : 0970 808 911</li>
+                <li><strong>Site Web</strong> : www.ionos.fr</li>
             </ul>
 
             <h2>3. Propriété intellectuelle</h2>
