--- a/templates/revetements/index.html.twig
+++ b/templates/revetements/index.html.twig
@@ -80,7 +80,8 @@
         <!-- Image et bouton -->
         <div class="col-md-6 image-et-bouton">
             <img src="{{ asset('images/revetement6.jpg') }}" alt="Image description" class="img-fluid">
-            <button class="dm-etude">Demandez votre étude</button>
+            <button class="dm-etude"><a href="{{ path('contact') }}">DEMANDE D'ÉTUDE</a></button>
+            
         </div>
     </div>
 </div>
