--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -205,9 +205,9 @@ body {
 
 .services-tech {
     font-size: 36px;
-    margin-bottom: 80px;
+    margin-bottom: 130px !important;
     color: #000;
-    margin-top: 80px;
+    margin-top: 50px;
 }
 
 /* Style des éléments de service */
@@ -1274,6 +1274,11 @@ iframe {
     border-radius: 20px;
     cursor: pointer;
     margin-bottom: 80px;
+    margin-top: 30px;
+}
+.dm-etude a{
+    text-decoration: none;
+    color: white;
 }
 
 .dm-etude:hover {
@@ -2064,12 +2069,24 @@ button {
 
 /* Ajustement responsive pour les petits écrans */
 @media (max-width: 768px) {
+    .nav-link{
+        background-color: #dcdada;
+        width: 100%;
+    }
     .nav-border{
         z-index: 10;
     }
     .carousel-caption h1.display-1 {
         font-size: 3.5rem; /* Plus grand pour les tablettes */
         text-align: center !important;
+        margin-left: 55px;
+        margin-top: -30px;
+        margin-bottom: 40px;
+    }
+    .lead{
+        margin-top: 100px;
+        margin-left: 55px !important;
+        
     }
 .carousel-caption {
     z-index: 0;
@@ -2139,6 +2156,7 @@ button {
 
     .image-section {
         order: 1;
+        margin-left: -30px !important;
     }
 
     .order-2 {
@@ -2161,7 +2179,7 @@ button {
         text-align: center;
     }
     .image-section-maconnerie{
-        margin-left: -25px;
+        margin-left: -35px;
     }
     /*page revetements*/
     .revetement-content {
@@ -2171,6 +2189,7 @@ button {
 
     .image-section-revetement {
         order: 1;
+        margin-left: -30px !important;
     }
 
     .order-2 {
