--- a/templates/isolation/index.html.twig
+++ b/templates/isolation/index.html.twig
@@ -96,7 +96,7 @@
         <!-- Image et bouton -->
         <div class="col-md-6 image-et-bouton">
             <img src="{{ asset('images/isolation2.jpg') }}" alt="Image description" class="img-fluid">
-            <button class="dm-etude">Demandez votre étude</button>
+            <button class="dm-etude"><a href="{{ path('contact') }}">DEMANDE D'ÉTUDE</a></button>
         </div>
     </div>
 </div>
