--- a/templates/maçonnerie/index.html.twig
+++ b/templates/maçonnerie/index.html.twig
@@ -77,5 +77,5 @@
         </div>
     </div>
 </section>
- <button class="btn-study">Demandez votre étude</button>
+ <a href="{{ path('contact') }}" class="btn btn-primary btn-study">DEMANDE D'ÉTUDE</a>
 {% endblock %}
