--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -54,7 +54,7 @@
                                 
                             </a>
                         {% else %}
-                            <a class="btn btn-login-icon" href="{{ path('user_dashboard', {id: app.user.id}) }}">
+                            <a class="btn btn-login-icon nav-link" href="{{ path('user_dashboard', {id: app.user.id}) }}">
                                 <i class="fas fa-user-circle"></i>
                                 
                             </a>
