--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -1,8 +1,17 @@
 /******************************Styles de la page d'accueil *************************************/
+* {
+    box-sizing: border-box; /* Inclut la bordure et le padding dans la taille de l'élément */
+
+    
+}
+
 body {
     font-family: 'Arial', sans-serif;
     margin: 0;
     padding: 0;
+   
+    
+    
 }
 /*******navbar*******/
 .navbar {
@@ -57,6 +66,7 @@ body {
     height: 100vh; /* Utilise la hauteur complète de la fenêtre */
     object-fit: cover;
     width: 100%; /* Assure que l'image occupe toute la largeur */
+    object-fit: cover;
 }
 
 .carousel-caption {
@@ -405,6 +415,16 @@ body {
 }
 #carouselTestimonials{
     margin-top: 100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    max-width: 100vw; /* Empêche le débordement de l'élément */
+    overflow: hidden; /* Empêche les éléments internes de déborder */
+    margin: 0 auto; 
+}
+.testimonial-card {
+    width: 100%; /* S'assure que chaque carte occupe la largeur disponible */
+    max-width: 300px; /* Limite la largeur maximale de chaque carte */
 }
 .card-text {
     color: #f5c518;
@@ -2071,12 +2091,14 @@ button {
 @media (max-width: 768px) {
     body{
         width: 100vw !important;
-        margin: 0 !important;
+        margin-top: 0 !important;
     }
     .nav-link{
         background-color: #dcdada !important;
         width: 100% !important;
+        
     }
+    
     .nav-border{
         z-index: 10;
     }
@@ -2088,11 +2110,11 @@ button {
         margin-bottom: 40px;
     }
     .lead{
-        margin-top: 50px;
-        margin-left: 36px !important;
+        margin-top: 80px;
+        margin-left: 55px !important;
         
     }
-    
+   
 .carousel-caption {
     z-index: 0;
     bottom: 10%;
@@ -2110,8 +2132,8 @@ button {
     .btn-study-acceuil {
         font-size: 1rem;
         padding: 10px 20px;
-        margin-top: 5%;
-        margin-left: 32% !important;
+        margin-top: 15%;
+        margin-left: 34% !important;
     }
     .team-presentation h2 {
         font-size: 28px;
@@ -2152,6 +2174,14 @@ button {
 
     .cloisons-images img {
         margin-bottom: 15px;
+    }
+    #carouselTestimonials {
+        padding: 0 10px; /* Réduit les marges internes sur les petits écrans */
+    }
+
+    .testimonial-card {
+        width: 90%; /* Réduit la largeur des cartes sur les petits écrans */
+        max-width: 100%;
     }
     /*page demolution*/
     .demolition-content {
